[package]
name = "rrr"
version = "0.1.0"
authors = ["evolix1 <evolix1@gmail.com>"]
description = "Ricochet robot game"
edition = "2018"

[dependencies]
specs = "0.14"
specs-derive = "0.4"
rand = "0.6"
serde = "1.0.91"
serde_derive = "1.0.91"
json5 = "0.2.4"

[dependencies.sdl2]
version = "0.32.2"
default-features = false
features = ["image"]
